--- a/eventausstattung.html
+++ b/eventausstattung.html
@@ -122,7 +122,11 @@
 		<section class="service_section layout_padding" id="service-section">
 			<div class="container-fluid form_section">
 				<div class="container">
-					<h1>Ihr Event beginnt hier - Kontatkieren Sie uns!</h1>
+					<div class="row">
+						<div class="col-md-12 col-push-1">
+							<h1>Ihr Event beginnt hier - Kontatkieren Sie uns!</h1>
+						</div>
+					</div>
 					<form action="submit_form.php" method="post">
 						<div class="row">
 							<div class="col-md-6 text-left">
