--- a/eventausstattung.html
+++ b/eventausstattung.html
@@ -10,14 +10,14 @@
 	<meta name="author" content="Neo Festivals Jens Köster und Laszlo Papesch GbR" />
 
   	<!-- Facebook and Twitter integration -->
-	<meta property="og:title" content="Eventausstattung"/>
+	<meta property="og:title" content="Eventsupport"/>
 	<meta property="og:image" content="images/nf-logo.png"/>
-	<meta property="og:url" content="www.neofestivals.de/eventausstattung"/>
+	<meta property="og:url" content="www.neofestivals.de/eventsupport"/>
 	<meta property="og:site_name" content="Neo Festivals Eventmanagement"/>
 	<meta property="og:description" content=""/>
-	<meta name="twitter:title" content="Eventausstattung" />
+	<meta name="twitter:title" content="Eventsupport" />
 	<meta name="twitter:image" content="images/nf-logo.png" />
-	<meta name="twitter:url" content="www.neofestivals.de/eventausstattung" />
+	<meta name="twitter:url" content="www.neofestivals.de/eventsupport" />
 	<meta name="twitter:card" content="" />
 
 
@@ -77,7 +77,6 @@
 							  <li><a href="eventberatung.html">Event Beratung</a></li>
 							  <li><a href="eventausstattung.html">Event Ausstattung</a></li>
 							</ul>
-						  </li>
 							<li><a href="contact.html">Contact</a></li>
 						</ul>
 					</div>
@@ -86,24 +85,18 @@
 			</div>
 		</nav>
 
-
-
-
-
-
 		<div class="gtco-section gtco-services">
 			<div class="gtco-container">
-				<div class="row gtco-servicehead ">
-					<div class="distance">
-						<div class="col-md-12 text-left">
+			  	<div class="row justify-content-center">
+					<div class="col-md-12 center-content">
+				  		<div class="gtco-servicehead text-left col-md-11">
 							<h2>Eventausstattung</h2>
-						</div>
-						<div class="col-md-12 text-left">
 							<h1>Ausstattung - Lieferung - Aufbau</h1>
-							  <p>Mit dem Eventausstattung-Paket decken wir ihren Bedarf an Eventtechnik ab. Vom einfachen Verleih bis zur Lieferung und Aufbau direkt an ihrer Veranstaltung bieten wir genau den Service den Sie brauchen!</p>
-						</div>
-
+							<p>Mit dem Eventausstattung-Paket decken wir ihren Bedarf an Eventtechnik ab. Vom einfachen Verleih bis zur Lieferung und Aufbau direkt an ihrer Veranstaltung bieten wir genau den Service den Sie brauchen!</p>
+				  		</div>
 					</div>
+			  	</div>
+				<div class="row justify-content-center">
 					<div class="col-md-12 col-push-1">
 						<div class="video-container abgerundet">
 							<video autoplay loop muted>
@@ -119,6 +112,16 @@
 				</div>
 			</div>
 		</div>
+
+
+
+
+
+
+
+
+
+
 		<section class="service_section layout_padding" id="service-section">
 			<div class="container-fluid form_section">
 				<div class="container">
@@ -176,7 +179,7 @@
 							<div class="col-md-12">
 								<div class="form-group">
 									<label for="nachricht">Nachricht*</label>
-									<textarea id="nachricht" name="nachricht" class="form-control" required></textarea>
+									<textarea id="nachricht" name="nachricht" placeholder="Erzählen Sie uns über ihre Veranstaltung. Wo können wir Sie unterstützen?" class="form-control" required></textarea>
 								</div>
 							</div>
 						</div>
@@ -191,11 +194,6 @@
 		</section>
 		  
 		
-
-
-		
-		
-
 		<footer id="gtco-footer" class="gtco-section" role="contentinfo">
 			<div class="gtco-container">
 				<div class="row row-pb-md">
@@ -213,18 +211,15 @@
 						<div class="row">
 							<ul class=" gtco-list-link">
 								<li><a href="index.html">Home</a></li>
-								<li><a href="services.html">Services</a></li>
+								<li><a href="#services">Services</a></li>
 								<li><a href="contact.html">Contact</a></li>
 								<li><a href="impressum.html">Impressum</a></li>
 								<li><a href="datenschutz.html">Datenschutz</a></li>
 							</ul>
-							
 						</div>
 					</div>
 				</div>
 			</div>
-
-	
 		</footer>
 		<!-- END footer -->
 
