--- a/eventberatung.html
+++ b/eventberatung.html
@@ -86,19 +86,19 @@
 			</div>
 		</nav>
 
-        <div class="gtco-section gtco-services">
+		<div class="gtco-section gtco-services">
 			<div class="gtco-container">
-			  	<div class="row gtco-servicehead ">
-					<div class="col-md-12 text-left">
-						<h2>Eventberatung</h2>
-                    </div>
-                    <div class="col-md-12 text-left">
-                        <h1>Konzepterstellung - Betreuung - Erfahrung von Profis</h1>
-				  		<p>Mit dem Eventberatung-Paket bieten wir ihnen unsere Expertise an, wo sie von ihnen benötigt wird.</p>
-                    </div>
+			  	<div class="row justify-content-center">
+					<div class="col-md-12">
+				  		<div class="gtco-servicehead text-left col-md-11">
+							<h2>Eventberatung</h2>
+							<h1>Konzepterstellung - Betreuung - Erfahrung von Profis</h1>
+							<p class="weiss">Mit dem Eventberatung-Paket bieten wir ihnen unsere Expertise an, wo sie von ihnen benötigt wird.</p>
+						</div>
+					</div>
 			  	</div>
-        	</div>
-        </div>    
+			</div>
+		</div>  
 
 		
 		<section class="service_section layout_padding" id="service-section">
