--- a/eventmanagement.html
+++ b/eventmanagement.html
@@ -86,30 +86,18 @@
 			</div>
 		</nav>
 
-
-
-
-
-
-
-
-		
-
-
-
-
-
-
-        <div class="gtco-section gtco-services">
+		<div class="gtco-section gtco-services">
 			<div class="gtco-container">
-			  	<div class="row gtco-servicehead ">
-					<div class="col-md-12 text-left">
-						<h2>Eventmanagement</h2>
-                    </div>
-                    <div class="col-md-12 text-left">
-                        <h1>Planung - Organisation - Vermarktung - Ausstattung - Durchführung</h1>
-				  		<p>Mit dem Eventmanagement-Paket legen Sie die Verantwortung für die gesamte Party in unsere Hände.  </p>
-                    </div>
+			  	<div class="row justify-content-center">
+					<div class="col-md-12">
+				  		<div class="gtco-servicehead text-left col-md-11">
+							<h2>Eventmanagement</h2>
+							<h1>Planung - Organisation - Vermarktung - Ausstattung - Durchführung</h1>
+				  			<p>Mit dem Eventmanagement-Paket legen Sie die Verantwortung für die gesamte Party in unsere Hände.  </p>
+                    	</div>
+					</div>
+			  	</div>
+				<div class="row gtco-servicehead">
                     <div class="col-md-12 col-push-1">
                         <div class="owl-carousel owl-carousel-fullwidth reduced-margin">
 						    <div class="item abgerundet">
