--- a/eventsupport.html
+++ b/eventsupport.html
@@ -85,24 +85,18 @@
 			</div>
 		</nav>
 
-
-
-
-
-
 		<div class="gtco-section gtco-services">
 			<div class="gtco-container">
-				<div class="row gtco-servicehead ">
-					<div class="distance">
-						<div class="col-md-12 text-left">
+			  	<div class="row justify-content-center">
+					<div class="col-md-12 center-content">
+				  		<div class="gtco-servicehead text-left col-md-11">
 							<h2>Eventsupport</h2>
-						</div>
-						<div class="col-md-12 text-left">
 							<h1>Logistik - Technische Unterstützung - Catering - Sicherheit</h1>
-							  <p>Das Eventunterstützung-Paket bietet umfassenden Support in allen Veranstaltungsbereichen. </p>
+							<p>Das Eventunterstützung-Paket bietet umfassenden Support in allen Veranstaltungsbereichen. </p>
 						</div>
-
 					</div>
+			  	</div>
+				<div class="row justify-content-center">
 					<div class="col-md-12 col-push-1">
 						<div class="video-container abgerundet">
 							<video autoplay loop muted>
