--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 			<div class="container-fluid form_section_light">
 				<div class="container">
 					<h1>Ihr Event beginnt hier - Kontatkieren Sie uns!</h1>
-					<form action="submit_form.php" method="post">
+					<form action="https://formspree.io/f/xleqjgvo" method="post">
 						<div class="row">
 							<div class="col-md-6 text-left">
 								<div class="form-group">
