--- a/contact.html
+++ b/contact.html
@@ -90,7 +90,7 @@
 				<div class="container">
 					<h1>Ihr Event beginnt hier - Kontatkieren Sie uns!</h1>
 					<h2>Formulieren Sie Ihre Anfrage oder rufen Sie einfach unter 01575 8537749 an.</h2>
-					<form action="submit_form.php" method="post">
+					<form action="https://formspree.io/f/mjvnygnr" method="post">
 						<div class="row">
 							<div class="col-md-6 text-left">
 								<div class="form-group">
