--- a/datenschutz.html
+++ b/datenschutz.html
@@ -77,7 +77,7 @@
 							    <li><a href="eventberatung.html">Event Beratung</a></li>
 							    <li><a href="eventausstattung.html">Event Ausstattung</a></li>
 							</ul>
-						    <li><a href="contact.html">Contact</a></li>
+						    <li><a href="kontakt.html">Kontakt</a></li>
 						</ul>
 					</div>
 				</div>
@@ -280,7 +280,7 @@
 							<ul class=" gtco-list-link">
 								<li><a href="index.html">Home</a></li>
 								<li><a href="#services">Services</a></li>
-								<li><a href="contact.html">Contact</a></li>
+								<li><a href="kontak.html">Kontakt</a></li>
 								<li><a href="impressum.html">Impressum</a></li>
 								<li><a href="datenschutz.html">Datenschutz</a></li>
 							</ul>
