--- a/impressum.html
+++ b/impressum.html
@@ -76,7 +76,7 @@
 							  <li><a href="eventberatung.html">Event Beratung</a></li>
 							  <li><a href="eventausstattung.html">Event Ausstattung</a></li>
 							</ul>
-							<li><a href="contact.html">Contact</a></li>
+							<li><a href="kontakt.html">Kontakt</a></li>
 						</ul>
 					</div>
 				</div>
@@ -148,7 +148,7 @@
 							<ul class=" gtco-list-link">
 								<li><a href="index.html">Home</a></li>
 								<li><a href="services.html">Services</a></li>
-								<li><a href="contact.html">Contact</a></li>
+								<li><a href="kontakt.html">Kontakt</a></li>
 								<li><a href="impressum.html">Impressum</a></li>
 								<li><a href="datenschutz.html">Datenschutz</a></li>
 							</ul>
