--- a/kontakt.html
+++ b/kontakt.html
@@ -86,7 +86,7 @@
 		</nav>
 
 		<div>
-			<embed src="https://www.solutiondev.net/“ style="width:500px; height: 300px;">
+			<embed src="google.de“ style="width:500px; height: 300px;">
 		</div>
 			
 
