--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 					<div class="col-md-12 col-push-1">
 						<div class="owl-carousel owl-carousel-fullwidth">
 							<div class="item abgerundet">
-								<a href="#">
+								<a href="blockparty.html">
 									<img src="images/slider_1.jpg" alt="Bierpongturnier der Rundenabschlussfeier des Sportverein Oberndorf am Neckar">
 									<div class="slider-copy">
 										<h2>SVO Rundenabschluss 2022 #1</h2>
