--- a/blockparty.html
+++ b/blockparty.html
@@ -14,7 +14,7 @@
 
 	<!-- jQuery 3.3.1 -->
     <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>-->
-	<script src="js/jquery.min.js"></script>
+	<script src="js/newjquery.min.js"></script>
 
 	<!-- Compressed Scripts -->
 	<script src="js/slides.min.js" type="text/javascript"></script>
