--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>Neo Festivals - Home</title>
 	<link rel="icon" href="images/favicon.png" type="image/png">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="This page is about the Work of the Neo Festivals GbR and to offer several services for eventmanagement in Baden-Württemberg"/>
+	<meta name="description" content="Erlebe unvergessliche Partys in und um Oberndorf mit  Neo Festivals GbR. Bereit für die nächste große Party am 19.04? Dann komm zur Blockparty nach Villingen-Schwenningen!"/>
 	<meta name="keywords" content="Eventmanagement, Eventservice, Partys, Events, Oberndorf am Neckar, Villingen-Schwenningen, Paardullis, Blockparty, Bierpongturnier "/>
 	<meta name="author" content="Neo Festivals Jens Köster und Laszlo Papesch GbR" />
 
