--- a/blockparty.html
+++ b/blockparty.html
@@ -263,21 +263,21 @@
               <div class="ae-3 fromRight">
                 <p class="opacity-8">
                   Direkt am Veranstaltungsort befindet sich die Haltestelle "Villingen Klosterhof".                  
-                  Da die Busfahrten Samstags in Villingen-Schwenningen kostenlos sind, könnt ihr Umsonst mit dem Bus nachhause fahren!!</p>
+                  Da die Busfahrten Samstags in Villingen-Schwenningen kostenlos sind, könnt ihr umsonst mit dem Bus nach Hause fahren!!</p>
               </div>
               <div class="relative">
                 <a href="https://www.bwegt.de/ihr-nahverkehr/reiseinformationen/efa/app/trip/0?formik=destination%3DstreetID%253A1500001035%253A3%253A8326074%253A10%253AAm%2520Klosterhof%253AVillingen-Schwenningen%253AAm%2520Klosterhof%253A%253AAm%2520Klosterhof%253A78052%253AANY%253ADIVA_SINGLEHOUSE%253A945469%253A5880594%253AMRCV%253Ab_w%253A0%26itdDateDayMonthYear%3D19042024%26itdTime%3D2000%26origin%3Dde%253A08326%253A6586&lng=de&trip=multiModalitySelected%3Dpt"><img src="assets/img/icon-2.png" class="ae-3 fromCenter app-26" alt="app"/></a>
                 <div class="text-26">
                   <h3 class="ae-3 fromRight">Von Schwenningen & Villingen zur Party</h3>
                   <div class="ae-5 fromRight">
-                    <p class="tiny opacity-6">Unter anderem fährt die Linie 3 zum Klosterhof. Klickt auf die Linie und checkt ab wie ihr zur Party kommt!</p>
+                    <p class="tiny opacity-6">Unter anderem fährt die Linie 3 zum Klosterhof. Klickt auf die Linie und checkt ab, wie ihr zur Party kommt!</p>
                   </div>
                 </div>
                 <a href="https://www.bwegt.de/ihr-nahverkehr/reiseinformationen/efa/app/trip/1?formik=destination%3Dde%253A08326%253A6586%26itdDateDayMonthYear%3D20042024%26itdTime%3D0200%26origin%3DstreetID%253A1500001035%253A3%253A8326074%253A10%253AAm%2520Klosterhof%253AVillingen-Schwenningen%253AAm%2520Klosterhof%253A%253AAm%2520Klosterhof%253A78052%253AANY%253ADIVA_SINGLEHOUSE%253A945469%253A5880594%253AMRCV%253Ab_w%253A0&lng=de&trip=multiModalitySelected%3Dpt"><img src="assets/img/icon-1.png" class="ae-3 fromCenter app-26" alt="app"/></a>
                 <div class="text-26">
                   <h3 class="ae-3 fromRight">Von der Party nach Schwenningen / Villingen</h3>
                   <div class="ae-5 fromRight">
-                    <p class="tiny opacity-6">Eine sichere Heimreise garantiert euch die Linie 25 bis 3 Uhr. Klickt auf die Linie und checkt ab wie ihr nachhause kommt!</p>
+                    <p class="tiny opacity-6">Eine sichere Heimreise garantiert euch die Linie 25 bis 3 Uhr. Klickt auf die Linie und checkt ab, wie ihr nachhause kommt!</p>
                   </div>
                 </div>
               </div>
@@ -376,7 +376,7 @@
         <div class="fix-6-12">
           <h1 class="huge ae-1 margin-bottom-2">Helfer werden!</h1>
           <p class="hero ae-2 margin-bottom-2"><span class="opacity-8">Werde Teil des Blockparty-Team und helfe, die Party möglich zu machen!<span></p>
-          <p class="ae-2 margin-bottom-3"><span class="opacity-8">Als Dankeschön erwarten euch ein Helfer-Trikot, Kostenloser Eintritt, Freigetränke und vieles mehr!<span></p>
+          <p class="ae-2 margin-bottom-3"><span class="opacity-8">Als Dankeschön erwarten euch ein Helfer-Trikot, kostenloser Eintritt, Freigetränke und vieles mehr!<span></p>
           
           <div class="ae-2">
             <a class="button green gradient" href="https://chat.whatsapp.com/FLLwDqZov3nC4zpqF3drm2">WhatsApp Gruppe Beitreten</a>
