--- a/blockparty.html
+++ b/blockparty.html
@@ -120,7 +120,7 @@
     <div class="right">
       <a class="button pink gradient" href="https://www.instagram.com/paardullis/">Instagram</a>
       <a class="button black gradient" href="https://www.tiktok.com/@paardullis" target="_blank">TikTok</a>
-      <a class="button green gradient" href="https://chat.whatsapp.com/DFHsz8HY8gYGwo91FHVPAw ">WhatsApp</a>
+      <a class="button green gradient" href="https://chat.whatsapp.com/DFHsz8HY8gYGwo91FHVPAw">WhatsApp</a>
     </div>
   </div>
   <div class="sections compact hidden">
@@ -151,6 +151,7 @@
     <ul class="subMenu small opacity-8">
       <li><a href="https://www.instagram.com/paardullis/">Instagram</a></li>
       <li><a href="https://www.tiktok.com/@paardullis">TikTok</a></li>
+      <li><a href="https://chat.whatsapp.com/DFHsz8HY8gYGwo91FHVPAw">WhatsApp Gruppe</a></li>	    
       <li><a href="Datenschutz.html">Datenschutz</a></li>
       <li><a href="Impressum.html">Impressum</a></li>
     </ul>
@@ -298,7 +299,7 @@
       <div class="wrap">
         
         <div class="fix-12-12">
-          <ul class="flex reverse verticalCenter">
+          <ul class="flex verticalCenter">
             <li class="col-7-12 left cell-26">
               <h1 class="ae-1 fromLeft">Specials</h1>
               <div class="ae-2 fromLeft">
