--- a/Blockparty.html
+++ b/Blockparty.html
@@ -104,7 +104,7 @@
   <div class="sections desktop">
     <div class="left">
       <a href="index.html" title="Neo Festivals Logo">
-        <img src="assets/img/nf-logo.png" style="width: auto; height: 60px" alt="Logo">
+        <img src="assets/img/nf-logo.png" class="websitelogo" alt="Logo">
       </a>
     </div>
     <div class="center">
@@ -126,7 +126,7 @@
   <div class="sections compact hidden">
     <div class="left">
       <a href="index.html" title="Neo Festivals Logo">
-        <img src="assets/img/nf-logo.png" style="width: auto; height: 60px" alt="Logo">
+        <img src="assets/img/nf-logo.png" class="websitelogo" alt="Logo">
       </a>
     </div>
     <div class="right"><span class="button actionButton sidebarTrigger" data-sidebar-id="1"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu"></use></svg></span</div>
