--- a/Blockparty.html
+++ b/Blockparty.html
@@ -7,6 +7,7 @@
 
 	<!-- Page Title -->
 	<title>Blockparty - Jetzt Tickets sichern!</title>
+	<link rel="icon" href="images/favicon.png" type="image/png">
 
 	<!-- Compressed Styles -->
 	<link href="css/slides.min.css" rel="stylesheet" type="text/css">
