--- a/blockparty.html
+++ b/blockparty.html
@@ -7,6 +7,7 @@
 
 	<!-- Page Title -->
 	<title>Blockparty - Jetzt Tickets sichern!</title>
+	<link rel="icon" href="images/favicon.png" type="image/png">
 
 	<!-- Compressed Styles -->
 	<link href="css/slides.min.css" rel="stylesheet" type="text/css">
@@ -104,7 +105,7 @@
   <div class="sections desktop">
     <div class="left">
       <a href="index.html" title="Neo Festivals Logo">
-        <img src="assets/img/nf-logo.png" style="width: auto; height: 60px" alt="Logo">
+        <img src="assets/img/nf-logo.png" class="websitelogo" alt="Logo">
       </a>
     </div>
     <div class="center">
@@ -126,7 +127,7 @@
   <div class="sections compact hidden">
     <div class="left">
       <a href="index.html" title="Neo Festivals Logo">
-        <img src="assets/img/nf-logo.png" style="width: auto; height: 60px" alt="Logo">
+        <img src="assets/img/nf-logo.png" class="websitelogo" alt="Logo">
       </a>
     </div>
     <div class="right"><span class="button actionButton sidebarTrigger" data-sidebar-id="1"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu"></use></svg></span</div>
@@ -154,12 +155,12 @@
       <li><a href="https://chat.whatsapp.com/DFHsz8HY8gYGwo91FHVPAw">WhatsApp Gruppe</a></li>	    
       <li><a href="Datenschutz.html">Datenschutz</a></li>
       <li><a href="Impressum.html">Impressum</a></li>
-    </ul>
+    </ul> <!---
     <ul class="social opacity-8">
       <li><a href="#"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#facebook"></use></svg></a></li>
       <li><a href="#"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#twitter"></use></svg></a></li>
       <li><a href="#"><svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#instagram"></use></svg></a></li>
-    </ul>
+    </ul> -->
   </div>
 </nav>
 
