--- a/impressum.html
+++ b/impressum.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Neo Festivals - Impressum</title>
+	<link rel="icon" href="images/favicon.png" type="image/png">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="This page is about the Work of the Neo Festivals GbR and to offer several services for eventmanagement in Baden-Württemberg"/>
 	<meta name="keywords" content="Eventmanagement, Eventservice, Partys, Events, Oberndorf am Neckar, Villingen-Schwenningen, Paardullis, Blockparty, Bierpongturnier "/>
