--- a/blockparty.html
+++ b/blockparty.html
@@ -199,7 +199,7 @@
           <ul class="grid">
             <li class="col-6-12 left">
               <h1 class="ae-2 fromLeft">Details zur Party</h1>
-              <p class="ae-3 fromLeft"><span class="opacity-8">Euch erwartet ein Abend an den ihr euch noch lange erinnern werdet. Zu Hip-Hop und Pop könnt ihr mit euren Freunden und über 400 weiteren Gästen abgehen! Neben einem Becherpongturnier um Preise im Wert von über 300€ erwarten euch noch weitere Highlights.</span></p>
+              <p class="ae-3 fromLeft"><span class="opacity-8">Euch erwartet ein Abend an den ihr euch noch lange erinnern werdet. Zu Hip-Hop und Pop könnt ihr mit euren Freunden und über 400 weiteren Gästen abgehen!</span></p>
               <ul class="tabs controller uppercase bold ae-4 fromCenter" data-slider-id="60-1">
                 <li class="selected">Wann?</li>
                 <li>Wo?</li>
